# CMake-progress

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dir.txt  script_cmake.sh
src/: CMakeLists.txt  Makefile  depend  dir.txt  main.c  remake_help.txt  script_cmake.sh
src/libs/: libs_dir.txt  makefile  script_cmake.sh
src/libs/inc_lib/: greeting.h
src/libs/src_lib/: CMakeLists.txt  greeting.c  test_shared_lib.c
src/src_files/: CMakeLists.txt  main.c  really.c
